feat: Update color scheme in various CSS modules
The color scheme in several CSS modules has been updated. The 'polygon1' class in the 'polygons.module.css' has been changed to use the 'color-accent-1' variable. Similar updates were also made in the 'index.module.css' and 'folder-icon.module.css'. In addition, the 'color-secondary-3' variable was removed from the 'global.css'.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/routes/hello/index.module.css
+++ b/src/routes/hello/index.module.css
@@ -48,7 +48,7 @@
 
 			h3 {
 				font-size: var(--font-size-subheadline);
-				color: var(--color-secondary-3);
+				color: var(--color-accent-1);
 			}
 		}
 
