feat: Update accent button color and remove unused color variable
The accent button's color scheme in the CSS module has been updated for improved visibility. Additionally, an unused color variable in the global CSS file has been removed to maintain clean and efficient code.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/button.module.css
+++ b/src/components/interface/button.module.css
@@ -13,10 +13,11 @@
 	}
 
 	&.accent {
-		background-color: var(--color-accent-1);
+		color: var(--color-background);
+		background-color: var(--color-accent-5);
 
 		&:hover {
-			background-color: var(--color-accent-1-lighter);
+			background-color: var(--color-accent-5-primary);
 		}
 	}
 
