--- a/src/routes/hello/game.module.css
+++ b/src/routes/hello/game.module.css
@@ -5,10 +5,10 @@
 	aspect-ratio: 510 / 475;
 	padding-block: 35px;
 	padding-inline: 30px;
-	background-color: color-mix(in srgb, #fff 7.5%, transparent);
+	background-color: color-mix(in srgb, var(--color-foreground-primary) 7.5%, transparent);
 	border: 1px solid var(--color-background-secondary);
 	border-radius: var(--border-radius-md);
-	box-shadow: inset 0 1px 0 color-mix(in srgb, #fff 30%, transparent);
+	box-shadow: inset 0 1px 0 color-mix(in srgb, var(--color-foreground-primary) 30%, transparent);
 
 	.main {
 		position: relative;
