feat: Update hover effects to include focus visibility
This commit modifies the hover effects in button, tab, accordion, and hello interface components to include focus visibility. This change gives users an enhanced experience while interacting with these components by providing visual feedback when they are in focus, improving accessibility.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/accordion.module.css
+++ b/src/components/interface/accordion.module.css
@@ -12,7 +12,7 @@
 		padding-inline: var(--padding);
 		border-block-end: var(--border);
 
-		&:hover {
+		&:is(:focus-visible, :hover) {
 			color: var(--color-foreground-primary);
 		}
 
