--- a/src/components/interface/button.module.css
+++ b/src/components/interface/button.module.css
@@ -7,7 +7,7 @@
 	&.primary {
 		background-color: var(--color-primary-2);
 
-		&:hover {
+		&:is(:focus-visible, :hover) {
 			background-color: var(--color-primary-2-lighter);
 		}
 	}
@@ -16,7 +16,7 @@
 		color: var(--color-background);
 		background-color: var(--color-accent-5);
 
-		&:hover {
+		&:is(:focus-visible, :hover) {
 			background-color: var(--color-accent-5-primary);
 		}
 	}
@@ -25,7 +25,7 @@
 		border: 1px solid var(--color-foreground-primary);
 		border-radius: var(--border-radius-md);
 
-		&:hover {
+		&:is(:focus-visible, :hover) {
 			border-color: color-mix(in srgb, var(--color-foreground-primary), transparent 50%);
 		}
 	}
