feat: Update header and footer styling
Added position and size properties to the header and footer to improve layout rendering. Also, made necessary adjustments to styles in the global CSS, including making the body position relative and adding padding to the main section.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/global.css
+++ b/src/global.css
@@ -65,6 +65,7 @@ html {
 	background-color: var(--color-background-primary);
 
 	body {
+		position: relative;
 		box-sizing: content-box;
 		block-size: var(--block-size-body);
 		overflow: hidden;
@@ -74,7 +75,9 @@ html {
 		border-radius: var(--border-radius-md);
 
 		main {
+			box-sizing: content-box;
 			block-size: var(--block-size-main);
+			padding-block: var(--block-size-header) var(--block-size-footer);
 			overflow: scroll;
 		}
 
