--- a/src/components/interface/footer.module.css
+++ b/src/components/interface/footer.module.css
@@ -1,6 +1,11 @@
 .footer {
+	position: absolute;
+	bottom: 0;
+	left: 0;
 	display: flex;
+	inline-size: 100%;
 	block-size: var(--block-size-footer);
+	background-color: var(--color-background);
 	border-block-start: var(--border);
 
 	> :not(:last-child) {
