--- a/src/components/interface/header.module.css
+++ b/src/components/interface/header.module.css
@@ -1,7 +1,13 @@
 .header {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
 	display: flex;
+	inline-size: 100%;
 	block-size: var(--block-size-header);
 	font-size: var(--font-size-label);
+	background-color: var(--color-background);
 	border-block-end: var(--border);
 
 	.title {
