feat: Added conditional styling for root page header and footer
The header and footer styles have been modified to conditionally apply a specific style when on the root ("/") path of the website. This is implemented as a temporary solution for styling and is indicated as needing further refactoring to improve the method of applying these conditional styles.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/header.module.css
+++ b/src/components/interface/header.module.css
@@ -7,8 +7,14 @@
 	inline-size: 100%;
 	block-size: var(--block-size-header);
 	font-size: var(--font-size-label);
-	background-color: var(--color-background);
 	border-block-end: var(--border);
+
+	/* TODO: Not a smart way. Need refactoring */
+	&.root {
+		@media (height < calc(20px /* outline padding */ * 2 + 56px /* header block-size */ + 56px /* footer block-size */ + 555px /* content block-size */)) {
+			background-color: var(--color-background);
+		}
+	}
 
 	.title {
 		display: flex;
