--- a/src/components/interface/footer.module.css
+++ b/src/components/interface/footer.module.css
@@ -5,8 +5,14 @@
 	display: flex;
 	inline-size: 100%;
 	block-size: var(--block-size-footer);
-	background-color: var(--color-background);
 	border-block-start: var(--border);
+
+	/* TODO: Not a smart way. Need refactoring */
+	&.root {
+		@media (height < calc(20px /* outline padding */ * 2 + 56px /* header block-size */ + 56px /* footer block-size */ + 555px /* content block-size */)) {
+			background-color: var(--color-background);
+		}
+	}
 
 	> :not(:last-child) {
 		border-inline-end: var(--border);
