refactor: Simplify media query calculation in CSS files
The media query which sets the background color for certain heights was simplified by replacing its calculations with the result value (707px). This should increase code readability in both header.module.css and footer.module.css files.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/header.module.css
+++ b/src/components/interface/header.module.css
@@ -11,7 +11,7 @@
 
 	/* TODO: Not a smart way. Need refactoring */
 	&.root {
-		@media (height < calc(20px /* outline padding */ * 2 + 56px /* header block-size */ + 56px /* footer block-size */ + 555px /* content block-size */)) {
+		@media (height < 707px /* 20px: outline padding * 2 + 56px: header block-size + 56px: footer block-size + 555px: content block-size */) {
 			background-color: var(--color-background);
 		}
 	}
