refactor: Revise focus-visible selector in global CSS
The previous version of the global CSS file used the ':is' pseudoclass incorrectly with 'focus-visible'. This commit corrects that by using the 'focus-visible' selector directly.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/global.css
+++ b/src/global.css
@@ -52,7 +52,7 @@
 }
 
 * {
-	:is(&:focus-visible) {
+	&:focus-visible {
 		outline: var(--border-width-lg) solid var(--color-accent-1);
 		outline-offset: calc(var(--border-width-lg) * -1);
 	}
