fix: Add rounded borders to header and footer
The styles for the header and footer components have been updated. Border radius properties were added to each to create rounded borders. The changes aim to enhance the visual appearance of the interface.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/footer.module.css
+++ b/src/components/interface/footer.module.css
@@ -6,6 +6,8 @@
 	inline-size: 100%;
 	block-size: var(--block-size-footer);
 	border-block-start: var(--border);
+	border-end-start-radius: var(--border-radius-md);
+	border-end-end-radius: var(--border-radius-md);
 
 	/* TODO: Not a smart way. Need refactoring */
 	&.root {
