refactor: Update CSS border properties for better RTL support
The border properties in the CSS of header, navigation, and footer modules have been updated. Replaced 'border-top-right-radius', 'border-top-left-radius', and 'border-bottom-right-radius' with 'border-start-end-radius', 'border-start-start-radius', and 'border-end-end-radius' respectively. These changes will help improve support for right-to-left (RTL) languages.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/footer.module.css
+++ b/src/components/interface/footer.module.css
@@ -51,7 +51,7 @@
 		&.github {
 			gap: 7px;
 			padding-inline: 23px;
-			border-bottom-right-radius: var(--border-radius-md);
+			border-end-end-radius: var(--border-radius-md);
 
 			&:is(:focus-visible, :hover) {
 				color: var(--color-foreground-primary);
