--- a/src/components/interface/header.module.css
+++ b/src/components/interface/header.module.css
@@ -31,7 +31,7 @@
 			inline-size: 100%;
 			block-size: 100%;
 			padding-inline: 22px;
-			border-top-left-radius: var(--border-radius-md);
+			border-start-start-radius: var(--border-radius-md);
 
 			&:is(:focus-visible, :hover) {
 				color: var(--color-foreground-primary);
