refactor: Remove temporary comments from CSS code
In this commit, temporary comments were removed from 'block-size' CSS properties in the 'about-me' route styling files. The changes impact the index.module.css, editor.module.css, and editor/pane.module.css files; the previous declaration was finalized and confirmed to be the standard rule to follow.

--- a/src/routes/about-me/editor/pane.module.css
+++ b/src/routes/about-me/editor/pane.module.css
@@ -1,7 +1,7 @@
 .pane {
 	flex-basis: 400px;
 	flex-grow: 1;
-	block-size: var(--block-size-main); /* TEMP: */
+	block-size: var(--block-size-main);
 
 	&:not(:last-child) {
 		border-inline-end: var(--border);
