--- a/src/routes/about-me/editor.module.css
+++ b/src/routes/about-me/editor.module.css
@@ -2,6 +2,6 @@
 	display: flex;
 	flex-grow: 1;
 	flex-wrap: wrap;
-	block-size: var(--block-size-main); /* TEMP: */
+	block-size: var(--block-size-main);
 	overflow: scroll;
 }
