feat: Add sidebar to contact page
A sidebar was integrated into the contact page to enhance navigation or functionality. Relevant CSS styles were updated to display the contact page as a flex container and style the new sidebar properly.

--- a/src/routes/contact-me/index.module.css
+++ b/src/routes/contact-me/index.module.css
@@ -1,3 +1,13 @@
 .container {
-	color: gold;
+	display: flex;
+	block-size: var(--block-size-main);
+
+	aside {
+		--inline-size-aside: var(--inline-size-sitetitle);
+		--inline-size-activitybar: 67px;
+
+		display: flex;
+		inline-size: var(--inline-size-aside);
+		border-inline-end: var(--border);
+	}
 }
