refactor: Update CSS for consistent border handling
Modified CSS across various component to consistently apply borders, especially for the last child elements. Rather than selectively applying borders via the ":not(:last-child)" pseudo-class, borders are now applied generally and removed for last child elements. This streamlined the border handling across different components.

--- a/src/components/interface/accordion.module.css
+++ b/src/components/interface/accordion.module.css
@@ -28,13 +28,14 @@
 
 		.container {
 			padding: var(--padding);
+			border-block-end: var(--border);
 		}
 	}
 
-	&:not(:last-child) {
+	&:last-child {
 		.body {
 			.container {
-				border-block-end: var(--border);
+				border-block-end: none;
 			}
 		}
 	}
