--- a/src/components/interface/header/navigation.module.css
+++ b/src/components/interface/header/navigation.module.css
@@ -7,6 +7,8 @@
 		block-size: 100%;
 
 		li {
+			border-inline-end: var(--border);
+
 			@container (inline-size < 709px) {
 				flex-grow: 1;
 			}
@@ -33,13 +35,10 @@
 				}
 			}
 
-			&:not(:last-child) {
-				border-inline-end: var(--border);
-			}
-
 			&:last-child {
 				margin-inline-start: auto;
 				border-inline-start: var(--border);
+				border-inline-end: none;
 
 				.link {
 					border-start-end-radius: var(--border-radius-md);
