--- a/src/routes/about-me/sidebar.module.css
+++ b/src/routes/about-me/sidebar.module.css
@@ -5,7 +5,7 @@
 		li {
 			--margin-block-start: 4px;
 
-			:where(a, button) {
+			:where(button) {
 				--gap: 8px;
 				--padding-inline: 6px;
 
@@ -29,7 +29,7 @@
 				margin-block-start: var(--margin-block-start);
 			}
 
-			> :is(a, button, span) {
+			> :is(button, span) {
 				padding-inline: var(--padding-inline);
 			}
 
@@ -37,7 +37,6 @@
 				margin-block-start: var(--margin-block-start);
 
 				li {
-					a,
 					button,
 					span {
 						padding-inline-start: calc(var(--padding-inline) + var(--gap) + var(--icon-size-xs));
