--- a/src/components/interface/editor.module.css
+++ b/src/components/interface/editor.module.css
@@ -4,4 +4,19 @@
 	flex-wrap: wrap;
 	block-size: var(--block-size-main);
 	overflow: scroll;
+
+	.pane {
+		flex-basis: 400px;
+		flex-grow: 1;
+		block-size: var(--block-size-main);
+		border-inline-end: var(--border);
+
+		&:last-child {
+			border-inline-end: none;
+		}
+
+		.content {
+			padding: 18px 40px;
+		}
+	}
 }
