--- a/src/routes/contact-me/form.module.css
+++ b/src/routes/contact-me/form.module.css
@@ -1,3 +1,20 @@
 .form {
-	color: gold;
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
+	font-size: var(--font-size-label);
+
+	.item {
+		inline-size: 372px;
+
+		input,
+		textarea {
+			inline-size: 100%;
+			padding: 7px 15px;
+			margin-top: 10px;
+			background-color: var(--color-background-secondary);
+			border: var(--border);
+			border-radius: var(--border-radius-md);
+		}
+	}
 }
