feat: Update padding and max-block-size styling for form.module.css
Additional CSS custom properties were introduced for padding --padding-block.
This change adjusts the padding of input and textarea items to use the new variable. Also, the max-block-size of the textarea has been updated to be dynamic based on the --padding-block variable alongside with a calculated value.

--- a/src/routes/contact-me/form.module.css
+++ b/src/routes/contact-me/form.module.css
@@ -5,13 +5,15 @@
 	font-size: var(--font-size-label);
 
 	.item {
+		--padding-block: 7px;
+
 		inline-size: 372px;
 
 		input,
 		textarea {
 			display: block;
 			inline-size: 100%;
-			padding: 7px 15px;
+			padding: var(--padding-block) 15px;
 			margin-top: 10px;
 			background-color: var(--color-background-secondary);
 			border: var(--border);
@@ -19,7 +21,7 @@
 		}
 
 		textarea {
-			max-block-size: 350px;
+			max-block-size: calc(24px * 14 + var(--padding-block) * 2);
 		}
 	}
 }
