feat: Update contact form styling and textarea size
Refactored the textarea CSS in the contact form to use CSS variables for more intuitive style adjustments. Also, the number of rows in the textarea was increased from 5 to 6 for better user visibility.

--- a/src/routes/contact-me/form.module.css
+++ b/src/routes/contact-me/form.module.css
@@ -21,7 +21,11 @@
 		}
 
 		textarea {
-			max-block-size: calc(24px * 14 + var(--padding-block) * 2);
+			--row-size: 24px;
+			--outer-size: calc((var(--padding-block) + var(--border-width-md)) * 2);
+
+			min-block-size: calc(var(--row-size) * 6 + var(--outer-size));
+			max-block-size: calc(var(--row-size) * 14 + var(--outer-size));
 		}
 	}
 }
