--- a/src/components/interface/button.module.css
+++ b/src/components/interface/button.module.css
@@ -5,10 +5,11 @@
 	border-radius: var(--border-radius-md);
 
 	&.primary {
-		background-color: var(--color-primary-2);
+		background-color: var(--color-background-secondary);
+		border: var(--border);
 
 		&:is(:focus-visible, :hover) {
-			background-color: var(--color-primary-2-lighter);
+			background-color: var(--color-background-tertiary);
 		}
 	}
 
