feat: Add validation and error feedback to contact form fields
This commit enhances the contact form in the application by adding validation to the 'name', 'email', and 'message' fields. It also introduces error feedback indications in the UI, highlighting errors directly under the respective input fields in a noticeable color.

--- a/src/routes/contact-me/form.module.css
+++ b/src/routes/contact-me/form.module.css
@@ -11,5 +11,10 @@
 		textarea {
 			margin-top: 10px;
 		}
+
+		p {
+			margin-block-start: 6px;
+			color: var(--color-accent-2-primary);
+		}
 	}
 }
