refactor: Updated error handling in contact form
This commit improves the user feedback on the Contact form by making the error messages always visible, but hidden by default. It adds an 'error' class to the form fields that have an error, which, combined with changes in the CSS, makes the error message visible when needed.

--- a/src/routes/contact-me/form.module.css
+++ b/src/routes/contact-me/form.module.css
@@ -13,8 +13,15 @@
 		}
 
 		p {
+			display: none;
 			margin-block-start: 6px;
 			color: var(--color-accent-2-primary);
+		}
+
+		&.error {
+			p {
+				display: block;
+			}
 		}
 	}
 }
