feat: Update outline color for input and textarea in form module css
This commit changes the outline color of the input and textarea fields in the form.module.css. The color used is the primary accent-2 color.

--- a/src/routes/contact-me/form.module.css
+++ b/src/routes/contact-me/form.module.css
@@ -22,6 +22,11 @@
 			p {
 				display: block;
 			}
+
+			input,
+			textarea {
+				outline-color: var(--color-accent-2-primary);
+			}
 		}
 	}
 }
