feat: Replace `<CloseIcon />` with `<PinIcon />` and disable `<button />`
The close icon in the editor tab was replaced with a pin icon. Also, the button that originally held the close icon is now disabled. The CSS has been updated to remove the hover effect on the disabled button while maintaining it for enabled buttons.

--- a/src/components/interface/editor/tab.module.css
+++ b/src/components/interface/editor/tab.module.css
@@ -16,7 +16,7 @@
 			line-height: 1;
 			border-radius: var(--border-radius-round);
 
-			&:is(:focus-visible, :hover) {
+			&:not([disabled]):is(:focus-visible, :hover) {
 				background-color: var(--color-background-secondary);
 			}
 
