--- a/src/routes/contact-me/form/body.module.css
+++ b/src/routes/contact-me/form/body.module.css
@@ -2,6 +2,8 @@
 	display: flex;
 	flex-direction: column;
 	gap: 24px;
+	align-items: center;
+	padding-block: 80px 50px;
 	font-size: var(--font-size-label);
 
 	.item {
