feat: Add center alignment to `<LinksAccordion />`
A center alignment rule has been added to the CSS of the links accordion module. This change ensures that the contents within the links accordion are centrally aligned, thereby improving the visual balance and consistency within the user interface.

--- a/src/components/interface/accordions/links-accordion.module.css
+++ b/src/components/interface/accordions/links-accordion.module.css
@@ -5,6 +5,7 @@
 
 			display: flex;
 			gap: 8px;
+			align-items: center;
 			inline-size: 100%;
 			padding-inline: var(--padding-inline);
 			margin-inline: calc(var(--padding-inline) * -1);
