--- a/src/global.css
+++ b/src/global.css
@@ -85,6 +85,14 @@ html {
 			transition: var(--transition);
 		}
 
+		button,
+		input,
+		textarea {
+			&[disabled] {
+				opacity: 0.5;
+			}
+		}
+
 		input,
 		textarea {
 			--padding-block: 7px;
@@ -95,10 +103,6 @@ html {
 			background-color: var(--color-background-secondary);
 			border: var(--border);
 			border-radius: var(--border-radius-md);
-
-			&[disabled] {
-				opacity: 0.5;
-			}
 
 			&::placeholder {
 				color: var(--color-accent-0);
