refactor: Isolate `<input />` and `<textarea />` styles to specific module
The global styles for input and textarea elements were removed, moving these styles to the "body.module.css" file within the "Contact Me" route to increase specificity. This change simplifies the global styles and allows the input/textarea styles to only apply where needed.

--- a/src/routes/contact-me/form/body.module.css
+++ b/src/routes/contact-me/form/body.module.css
@@ -10,7 +10,31 @@
 
 		input,
 		textarea {
+			--padding-block: 7px;
+
+			display: block;
+			inline-size: 100%;
+			padding: var(--padding-block) 15px;
 			margin-top: 10px;
+			background-color: var(--color-background-secondary);
+			border: var(--border);
+			border-radius: var(--border-radius-md);
+
+			&[disabled] {
+				opacity: 0.5;
+			}
+
+			&::placeholder {
+				color: var(--color-accent-0);
+			}
+		}
+
+		textarea {
+			--row-size: 24px;
+			--outer-size: calc((var(--padding-block) + var(--border-width-md)) * 2);
+
+			min-block-size: calc(var(--row-size) * 6 + var(--outer-size));
+			max-block-size: calc(var(--row-size) * 14 + var(--outer-size));
 		}
 
 		p {
