--- a/src/routes/contact-me/form/body.module.css
+++ b/src/routes/contact-me/form/body.module.css
@@ -40,7 +40,7 @@
 		p {
 			display: none;
 			margin-block-start: 6px;
-			color: var(--color-accent-2-primary);
+			color: var(--color-accent-2);
 		}
 
 		&.error {
@@ -50,7 +50,7 @@
 
 			input,
 			textarea {
-				outline-color: var(--color-accent-2-primary);
+				outline-color: var(--color-accent-2);
 			}
 		}
 	}
