refactor: Update form error styles to use new danger color
Changed the color of error messages and input outlines in the contact form to use the new danger color variable. Added new color tokens for success, warning, and danger in the global styles.

--- a/src/routes/contact-me/form/body.module.css
+++ b/src/routes/contact-me/form/body.module.css
@@ -40,7 +40,7 @@
 		p {
 			display: none;
 			margin-block-start: 6px;
-			color: var(--color-accent-2);
+			color: var(--color-danger);
 		}
 
 		&.error {
@@ -50,7 +50,7 @@
 
 			input,
 			textarea {
-				outline-color: var(--color-accent-2);
+				outline-color: var(--color-danger);
 			}
 		}
 	}
