--- a/src/routes/hello/game/key.module.css
+++ b/src/routes/hello/game/key.module.css
@@ -5,7 +5,7 @@
 	justify-content: center;
 	inline-size: 49px;
 	block-size: 28px;
-	background-color: var(--color-background-secondary);
+	background-color: var(--color-background);
 	border: var(--border);
 	border-radius: var(--border-radius-md);
 
