--- a/src/styles/theme/solarized.css
+++ b/src/styles/theme/solarized.css
@@ -32,5 +32,12 @@
 		--palette-foreground-primary: #93a1a1;
 		--palette-foreground-secondary: #586e75;
 		--palette-gray: #586e75;
+		--palette-accent-1: var(--palette-green);
+		--palette-accent-2: var(--palette-purple);
+		--palette-accent-3: var(--palette-aqua);
+		--palette-accent-4: var(--palette-yellow);
+		--palette-accent-5: var(--palette-orange);
+		--palette-accent-6: var(--palette-red);
+		--palette-accent-7: var(--palette-blue);
 	}
 }
