--- a/src/styles/theme/solarized.css
+++ b/src/styles/theme/solarized.css
@@ -1,19 +1,19 @@
 :root {
-	--palette-background: #fdf6e3;
-	--palette-background-primary: #eee8d5;
-	--palette-background-secondary: rgb(221 214 193);
-	--palette-background-tertiary: rgb(240 236 225);
-	--palette-foreground: #657b83;
-	--palette-foreground-primary: #586e75;
-	--palette-foreground-secondary: #93a1a1;
-	--palette-gray: #93a1a1;
-	--palette-red: #dc322f;
-	--palette-green: #859900;
-	--palette-yellow: #b58900;
-	--palette-blue: #268bd2;
-	--palette-purple: #6c71c4;
-	--palette-aqua: #2aa198;
-	--palette-orange: #cb4b16;
+	--palette-background: hsl(44deg 87% 94%);
+	--palette-background-primary: hsl(46deg 42% 88%);
+	--palette-background-secondary: hsl(45deg 29% 81%);
+	--palette-background-tertiary: hsl(44deg 33% 91%);
+	--palette-foreground: hsl(196deg 13% 45%);
+	--palette-foreground-primary: hsl(194deg 14% 40%);
+	--palette-foreground-secondary: hsl(180deg 7% 60%);
+	--palette-gray: hsl(180deg 7% 60%);
+	--palette-red: hsl(1deg 71% 52%);
+	--palette-green: hsl(68deg 100% 30%);
+	--palette-yellow: hsl(45deg 100% 35%);
+	--palette-blue: hsl(205deg 69% 49%);
+	--palette-purple: hsl(237deg 43% 60%);
+	--palette-aqua: hsl(175deg 59% 40%);
+	--palette-orange: hsl(18deg 80% 44%);
 	--palette-accent-0: var(--palette-gray);
 	--palette-accent-1: var(--palette-green);
 	--palette-accent-2: var(--palette-yellow);
@@ -24,14 +24,14 @@
 	--palette-accent-7: var(--palette-blue);
 
 	@media (prefers-color-scheme: dark) {
-		--palette-background: #002b36;
-		--palette-background-primary: #073642;
-		--palette-background-secondary: rgb(0 56 71);
-		--palette-background-tertiary: rgb(14 41 49);
-		--palette-foreground: #839496;
-		--palette-foreground-primary: #93a1a1;
-		--palette-foreground-secondary: #586e75;
-		--palette-gray: #586e75;
+		--palette-background: hsl(192deg 100% 11%);
+		--palette-background-primary: hsl(192deg 81% 14%);
+		--palette-background-secondary: hsl(193deg 100% 14%);
+		--palette-background-tertiary: hsl(194deg 56% 12%);
+		--palette-foreground: hsl(186deg 8% 55%);
+		--palette-foreground-primary: hsl(180deg 7% 60%);
+		--palette-foreground-secondary: hsl(194deg 14% 40%);
+		--palette-gray: hsl(194deg 14% 40%);
 		--palette-accent-1: var(--palette-green);
 		--palette-accent-2: var(--palette-purple);
 		--palette-accent-3: var(--palette-aqua);
