feat: Add `flex-shrink` to the `<aside />`
This change ensures the `<aside />` elements in both the "about me" and "contact me" routes do not shrink when the available space is reduced.

--- a/src/routes/about-me/index.module.css
+++ b/src/routes/about-me/index.module.css
@@ -7,6 +7,7 @@
 		--inline-size-activitybar: 67px;
 
 		display: flex;
+		flex-shrink: 0;
 		inline-size: var(--inline-size-aside);
 		border-inline-end: var(--border);
 	}
