--- a/src/routes/about-me/data/contents/content.module.css
+++ b/src/routes/about-me/data/contents/content.module.css
@@ -1,3 +1,16 @@
 .container {
-	/* stylelint-disable: no-empty-block */
+	a {
+		color: var(--color-accent-3);
+		text-decoration: underline;
+
+		&:is(:focus-visible, :hover) {
+			color: var(--color-foreground);
+		}
+	}
+
+	p {
+		+ p {
+			margin-top: 1em;
+		}
+	}
 }
