--- a/src/components/interface/footer.module.css
+++ b/src/components/interface/footer.module.css
@@ -11,8 +11,8 @@
 
 	/* TODO: Not a smart way. Need refactoring */
 	&.root {
-		@media (height < 707px /* 20px: outline padding * 2 + 56px: header block-size + 56px: footer block-size + 555px: content block-size */) {
-			background-color: var(--color-background);
+		@media (height >= 707px /* 20px: outline padding * 2 + 56px: header block-size + 56px: footer block-size + 555px: content block-size */) {
+			background-color: transparent;
 		}
 	}
 
