--- a/src/components/interface/header.module.css
+++ b/src/components/interface/header.module.css
@@ -11,7 +11,7 @@
 	border-start-start-radius: var(--border-radius-md);
 	border-start-end-radius: var(--border-radius-md);
 
-	/* TODO: Not a smart way. Need refactoring */
+	/* HACK: Not a smart way. Need refactoring */
 	&.root {
 		@media (height >= 707px /* 20px: outline padding * 2 + 56px: header block-size + 56px: footer block-size + 555px: content block-size */) {
 			background-color: transparent;
