--- a/src/components/interface/footer.module.css
+++ b/src/components/interface/footer.module.css
@@ -5,6 +5,7 @@
 	display: flex;
 	inline-size: 100%;
 	block-size: var(--block-size-footer);
+	background-color: var(--color-background);
 	border-block-start: var(--border);
 	border-end-start-radius: var(--border-radius-md);
 	border-end-end-radius: var(--border-radius-md);
