feat: Adjust z-index for `<header />` and `<footer />`
Increased the z-index for both header and footer components to 2.

--- a/src/components/interface/footer.module.css
+++ b/src/components/interface/footer.module.css
@@ -2,6 +2,7 @@
 	position: absolute;
 	bottom: 0;
 	left: 0;
+	z-index: 2;
 	display: flex;
 	inline-size: 100%;
 	block-size: var(--block-size-footer);
