feat: Add background color to `<header />`
This update introduces a `background-color` property to the header component's CSS.

--- a/src/components/interface/header.module.css
+++ b/src/components/interface/header.module.css
@@ -7,6 +7,7 @@
 	inline-size: 100%;
 	block-size: var(--block-size-header);
 	font-size: var(--font-size-label);
+	background-color: var(--color-background);
 	border-block-end: var(--border);
 	border-start-start-radius: var(--border-radius-md);
 	border-start-end-radius: var(--border-radius-md);
