feat: Change `padding` to `margin` in `<main />`
The `padding` was causing layout issues, so it has been updated to use `margin-block` instead.

--- a/src/global.css
+++ b/src/global.css
@@ -24,7 +24,7 @@ html {
 		main {
 			box-sizing: content-box;
 			block-size: var(--block-size-main);
-			padding-block: var(--block-size-header) var(--block-size-footer);
+			margin-block: var(--block-size-header) var(--block-size-footer);
 			overflow: scroll;
 		}
 
