fix: Fix border display in navigation on smaller screens
Added media container query to remove left border for inline size below 709px. This ensures a cleaner look on smaller screens and prevents layout issues.

--- a/src/components/interface/header/navigation.module.css
+++ b/src/components/interface/header/navigation.module.css
@@ -40,6 +40,10 @@
 				border-inline-start: var(--border);
 				border-inline-end: none;
 
+				@container (inline-size < 709px) {
+					border-inline-start: none;
+				}
+
 				.link {
 					border-start-end-radius: var(--border-radius-md);
 				}
